# ComplexEnumeration

./: .gitignore  README.md  environment.yml  pyproject.toml
benchmarks/: benchmark_5l93_reaction_gen.py  benchmark_8y7s_reaction_gen.py
data/: 5l93_example.py  8y7s_example.py
examples/: group_example.py
src/: example_complex_graph.py  molecule_gen.py  reaction_gen.py  split_graph.py  transformation_reaction.py
src/complexes/: subcomplexes.py
src/ode_gen/complexes/: examples.py  subcomplexes.py
src/ode_gen/reactions/: __init__.py  dimer.py  transformation.py
src/ode_gen/symmetry/: __init__.py  grid.py  pointgroup.py  rotations.py  tensors.py  utils.py
src/reactions/: dimer.py  transformation.py
tests/: test_subcomplex_extraction.py
tex/: DocumentationComplexEnumeration.tex
