[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ode_gen"
version = "0.1.0"
description = "Molecular graph assembly and reaction generation tools"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Y Ying", email="yying7@jh.edu" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
